# nb

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  lib.rs  main.rs  note.rs
src/handlers/: add.rs  mod.rs
