[package]
name = "nota-bene"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nb"
path = "src/main.rs"

[lib]
name = "nb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"